--- a/NPC_FLIP_simulations.Rmd
+++ b/NPC_FLIP_simulations.Rmd
@@ -66,6 +66,15 @@ def time_series(sim_time_sec, attributes, n_skip=10, dt_sec=1e-3, **kwargs):
   ts= TransportSimulation(**kwargs)
   ts.bleach_start_time_sec= 100.0
   ts.dt_sec= dt_sec
+  ##### DEBUG
+  DEBUG= False
+  if DEBUG:
+      init_params= {"Ran_cell_M": 20e-6}
+      ts= get_new_transport_simulation(**init_params)
+      ts.set_params(
+        max_passive_diffusion_rate_nmol_per_sec_per_M  = 2e+7,
+        fraction_complex_NPC_traverse_per_sec = 1.0)        
+  ##### DEBUG
   n= int(np.ceil(sim_time_sec / ts.dt_sec))
   print(f"Running for n={n} time steps")
   n_frames= int(np.floor(n/n_skip)) + 1 
@@ -97,7 +106,10 @@ def plot_simulation_attributes(sim_time_sec,
                   n_skip= n_skip,
                   dt_sec= dt_sec,
                   **kwargs)
-  fig, axes= plt.subplots(3,1, figsize=(10,15), squeeze= False)
+  fig, axes= plt.subplots(len(attributes_list),
+                          1, 
+                          figsize=(10,15), 
+                          squeeze= False)
   for cur_attributes, ax in zip(attributes_list, axes[:,0]):
       print(cur_attributes)
       for attr in cur_attributes:
@@ -119,7 +131,7 @@ def plot_simulation_attributes(sim_time_sec,
 ```
 
 ```{python id="lzmLU0YTw74H", jupyter={'source_hidden': True}}
-sim_time_sec= 150.0
+sim_time_sec= 100.0
 RAN_attributes = ['GDP_N', 'GDP_C', 'GTP_N', 'GTP_C']
 cargoL_attributes= ['complexL_NPC_C_import', 'complexL_NPC_C_export',
                     'complexL_NPC_N_import', 'complexL_NPC_N_export',
@@ -137,22 +149,27 @@ dock_attributes = ['c_C_M', 'fraction_C_b', 'nmol_NPC', 'NPC_dock_capacity']
 
 ```{python colab={'base_uri': 'https://localhost:8080/', 'height': 1000}, id="HcFrpVqGyUYA", jupyter={'outputs_hidden': True, 'source_hidden': True}, outputId="6eda17e7-207f-4440-e5b7-8ee5561ff8c2"}
 is_log= False
+sim_flags= dict(rate_free_to_complex_per_sec=1.0,
+                max_passive_diffusion_rate_nmol_per_sec_per_M=2e7)
 ax, x, c= plot_simulation_attributes(sim_time_sec, 
                            [ RAN_attributes, 
                              cargoL_attributes, 
                              cargoU_attributes ],
                             log= is_log,
-                            dt_sec=1e-3)
+                            dt_sec=1e-3,
+                            **sim_flags)
 ```
 
 ```{python colab={'base_uri': 'https://localhost:8080/', 'height': 1000}, id="HcFrpVqGyUYA", jupyter={'outputs_hidden': True, 'source_hidden': True}, outputId="6eda17e7-207f-4440-e5b7-8ee5561ff8c2"}
-print(c.keys())
 fig,ax= plt.subplots(1,1)
-ax.plot(x, 
-        c['complexL_NPC_C_import']+
-        c['complexL_NPC_C_export']+ 
-        c['complexL_NPC_N_import']+
-        c['complexL_NPC_N_export'])
+
+total_cargo= 0.0 * c['complexL_NPC_C_import'] 
+for key in c.keys():
+    if key.startswith('complex') or key.startswith('free'):
+        total_cargo += c[key]
+ax.plot(x, total_cargo)
+print(total_cargo[1:1000])
+
 #plt.show()
 #plt.figure(figsize=(10,5))
 #c=plot_simulation_attributes(sim_time_sec, cargoL_attributes, log= is_log)
@@ -160,6 +177,29 @@ ax.plot(x,
 #plt.figure(figsize=(10,5))
 #c=plot_simulation_attributes(sim_time_sec, cargoU_attributes, log= is_log)
 #plt.show()
+
+
+```
+
+```{python}
+ts= transport_simulation.TransportSimulation()
+print(ts.max_passive_diffusion_rate_nmol_per_sec_per_M)
+ts.bleach_start_time_sec= 100.0
+ts.dt_sec= 1e-3
+for i in range(10):                                                   
+    RAN = ts.get_total_RAN()                                            
+    cargo = ts.get_total_cargo_nmol()                                   
+    ts.do_one_time_step()                                               
+    RAN_after = ts.get_total_RAN()                                      
+    cargo_after = ts.get_total_cargo_nmol()   
+    print(cargo_after)
+    if np.abs(RAN - RAN_after)>0.1:                                       
+        print(i, f"Ran mismatch: {RAN}, {RAN_after}")                     
+    if np.abs(cargo - cargo_after)>0.1:                                   
+        print(i, f"cargo mismatch: {cargo}, {cargo_after}")               
+                                                                                  
+
+
 ```
 
 ```{python}
@@ -169,20 +209,20 @@ ax.plot(x,
 ```{python colab={'base_uri': 'https://localhost:8080/', 'height': 327}, id="XhwtdMILBQRz", jupyter={'outputs_hidden': True, 'source_hidden': True}, outputId="a839a06b-8902-4553-8096-f39b2a9ea16c"}
 
 #fig, ax = plt.subplots(1, 3,figsize=(40,5))
-axes0, _, _ = plot_simulation_attributes(sim_time_sec, 
+axes0, x, c_1 = plot_simulation_attributes(sim_time_sec, 
                                    [cargoL_attributes], 
                                    log= is_log, rate_GDP_N_to_GTP_N_per_sec=0.2,
                                   dt_sec= 1e-3)
 axes0[0,0].set_title("slow GDP_N to GTP_N rate")
-axes1, _, _ = plot_simulation_attributes(sim_time_sec, [cargoL_attributes], 
+axes1, x, c_2 = plot_simulation_attributes(sim_time_sec, [cargoL_attributes], 
                                    log= is_log,
                                   dt_sec= 1e-3)
 axes1[0,0].set_title("normal GDP_N to GTP_N rate")
-fig, ax2= plt.subplots(1,1)
-ax2.plot(c_1[-1], label='rate_GDP_N_to_GTP_N_per_sec=0.2')
-ax2.plot(c_2[-1], label='rate_GDP_N_to_GTP_N_per_sec=200.0')
-ax2.set_title("complexL_N")
-ax2.legend()
+#fig, ax2= plt.subplots(1,1)
+#ax2.plot(c_1[-1], label='rate_GDP_N_to_GTP_N_per_sec=0.2')
+#ax2.plot(c_2[-1], label='rate_GDP_N_to_GTP_N_per_sec=200.0')
+#ax2.set_title("complexL_N")
+#ax2.legend()
 ```
 
 ## Map parameters phasespace of transport
@@ -218,8 +258,9 @@ def mp_do_simulation(param_range, i, j,
                      equilibration_time_sec):
     init_params= {"Ran_cell_M": 20e-6}
     my_ts= get_new_transport_simulation(**init_params)
-    my_ts.set_params(max_passive_diffusion_rate_nmol_per_sec_per_M  = param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"][i],
-              fraction_complex_NPC_traverse_per_sec = param_range["rate_free_to_complex_per_sec"][j])        
+    my_ts.set_params(
+        max_passive_diffusion_rate_nmol_per_sec_per_M  = param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"][i],
+        rate_free_to_complex_per_sec = param_range["rate_free_to_complex_per_sec"][j])        
     stats = my_ts.simulate(equilibration_time_sec)   
     return {"i":i, "j":j, "stats":stats}
 
@@ -254,14 +295,14 @@ def map_param_grid_parallel(nx,
     epsilon = 1e-9
     c_cargo_M= 50e-6 # TODO: fetch this from the simulation
     param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"] = \
-        np.logspace(3, #0.001+epsilon, 
+        np.logspace(2, #0.001+epsilon, 
                     5, #-epsilon, 
                     nx) / c_cargo_M # divided by 50E-6 to normalize by the initial cargo concentration # TODO: take the actual cargo concentration?
     param_range["rate_free_to_complex_per_sec"] = \
         np.logspace(-3, 
                     0, #-epsilon, 
                     ny)
-    ts= get_new_transport_simulation(fraction_complex_NPC_traverse_per_sec=1.)
+    ts= get_new_transport_simulation()
     for key in param_range.keys():
         print("Param {:} default value is {:}".format(key, getattr(ts, key)))
     stats_grids = {}
@@ -301,8 +342,8 @@ def get_N_to_C_ratios(stats_grids, v_N_L, v_C_L):
     ratios= (nNs/v_N_L) / (nCs/v_C_L)
     return ratios
 
-param_range, stats_grids= map_param_grid_parallel(nx= 5,
-                                        ny= 8,
+param_range, stats_grids= map_param_grid_parallel(nx= 4,
+                                        ny= 4,
 #                                       is_reset=True, 
                                         equilibration_time_sec= 100.0,
                                         n_processors=6)
@@ -312,15 +353,7 @@ ratios= get_N_to_C_ratios(stats_grids,
 ```
 
 ```{python id="Edd4bveu5jph"}
-def get_import_export_ratios(stats_grids):
-    ''' return import/export ratios from stats_grids computed in the previous cell'''
-    import_rate= stats_grids["import_L"]+stats_grids["import_U"]
-    export_rate= stats_grids["export_L"]+stats_grids["export_U"]
-    ratios= import_rate/export_rate
-    return ratios
-
-if False:
-    ratios_import_export= get_import_export_ratios(stats_grids)
+print(param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"])
 ```
 
 ```{python id="XQvFv3M-NYJN"}
@@ -329,40 +362,23 @@ import matplotlib.ticker as mtick
 vmax=4
 x_meshgrid, y_meshgrid = np.meshgrid(param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"],
                                      param_range["rate_free_to_complex_per_sec"])
-plt.figure()
-ax=plt.gca()
-plt.imshow(ratios, vmin=1, vmax=vmax)
-xlim= ax.get_xlim()
-ylim= ax.get_ylim()
-ax.set_xlim(xlim[1], xlim[0])
-ax.set_ylim(ylim[1], ylim[0])
-cb = plt.colorbar(label="N/C ratio")
-ticks = cb.get_ticks()
-cb.set_ticks(ticks)
+
 ##### Contourf
 plt.figure()
 plt.contourf(x_meshgrid, y_meshgrid, ratios, vmin=1.0, vmax=vmax, levels=np.linspace(1.0,vmax,21), extend='both')
 ax= plt.gca()
 ax.set_xscale('log')
 ax.set_yscale('log')
-#ax.set_yscale('log')
 ax.set_xlabel(r"passive diffusion rate [$s^{-1} M^{-1}$]")
 ax.set_ylabel("importin binding rate [$s^{-1}$]")
 xlim= ax.get_xlim()
 ylim= ax.get_ylim()
 ax.set_xlim(xlim[1], xlim[0])
-#ax.set_ylim(ylim[1], ylim[0])
 print(ax.get_xticks())
-#ax.set_xticklabels(["{:.1f}".format(xtick) for xtick in param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"]])
-#ax.set_yticklabels(["{:.2f}".format(ytick) for ytick in param_range["rate_free_C_to_complex_C_per_sec"]])
 cb = plt.colorbar(label="N/C ratio")
 ticks = cb.get_ticks()
 cb.set_ticks(ticks)
 
-#ax.xaxis.set_major_formatter(mtick.FormatStrFormatter("%.1f"))
-#ax.yaxis.set_major_formatter(mtick.FormatStrFormatter("%.1f"))
-
-#cb.set_ticklabels([f'{tick:.0e}' for tick in np.exp(ticks)])
 
 
 ```
@@ -380,7 +396,10 @@ for compartment in ['N', 'C']:
     vmax=1.0
     plt.figure()
     plt.contourf(x_meshgrid, y_meshgrid, complexL_fraction, 
-                 vmin=0.0, vmax=vmax, levels=np.linspace(0,vmax,11), extend='both')
+                 vmin=0.0, 
+                 vmax=vmax, 
+                 levels=np.linspace(0,vmax,11), 
+                 extend='both')
     ax= plt.gca()
     ax.set_xscale('log')
     ax.set_yscale('log')
@@ -400,7 +419,10 @@ for compartment in ['N', 'C']:
 ```
 
 ```{python}
-def get_ts_parameters(MW=27, NLS_strength=0, force=False, **kwargs):
+def get_ts_parameters(MW=27, 
+                      NLS_strength=0, 
+                      force=False, 
+                      **kwargs):
     ts = TransportSimulation(**kwargs)
     diffusion_rate = get_diffusion_rate(MW)
     free_to_complex_rate = get_free_to_complex_rate(NLS_strength)
@@ -466,6 +488,49 @@ plt.plot(stats['complexL_NPC_N_import'] +
 ```
 
 ```{python}
+def get_import_export_ratios(stats_grids):
+    ''' return import/export ratios from stats_grids computed in the previous cell'''
+    import_rate= stats_grids["import_L"]+stats_grids["import_U"]
+    export_rate= stats_grids["export_L"]+stats_grids["export_U"]
+    ratios= import_rate/export_rate
+    return ratios
+
+ratios_import_export= get_import_export_ratios(stats_grids)
+    
+import matplotlib.pyplot as plt
+import matplotlib.ticker as mtick
+vmax=4
+x_meshgrid, y_meshgrid = np.meshgrid(param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"],
+                                     param_range["rate_free_to_complex_per_sec"])
+##### Contourf
+for tag in ['import', 'export']:
+    plt.figure()
+    plt.contourf(x_meshgrid, 
+                 y_meshgrid, 
+                 stats_grids[f'{tag}_U']+stats_grids[f'{tag}_U'])
+                 #ratios_import_export) #, vmin=1.0, vmax=vmax, levels=np.linspace(1.0,vmax,21), extend='both')
+    ax= plt.gca()
+    ax.set_xscale('log')
+    ax.set_yscale('log')
+    #ax.set_yscale('log')
+    ax.set_xlabel(r"passive diffusion rate [$s^{-1} M^{-1}$]")
+    ax.set_ylabel("importin binding rate [$s^{-1}$]")
+    xlim= ax.get_xlim()
+    ylim= ax.get_ylim()
+    ax.set_xlim(xlim[1], xlim[0])
+    #ax.set_ylim(ylim[1], ylim[0])
+    print(ax.get_xticks())
+    #ax.set_xticklabels(["{:.1f}".format(xtick) for xtick in param_range["max_passive_diffusion_rate_nmol_per_sec_per_M"]])
+    #ax.set_yticklabels(["{:.2f}".format(ytick) for ytick in param_range["rate_free_C_to_complex_C_per_sec"]])
+    cb = plt.colorbar(label=tag)
+    ticks = cb.get_ticks()
+    cb.set_ticks(ticks)
+
+    #ax.xaxis.set_major_formatter(mtick.FormatStrFormatter("%.1f"))
+    #ax.yaxis.set_major_formatter(mtick.FormatStrFormatter("%.1f"))
+
+    #cb.set_ticklabels([f'{tick:.0e}' for tick in np.exp(ticks)])
+
 
 ```
 
