--- a/NPC_FLIP_simulations.Rmd
+++ b/NPC_FLIP_simulations.Rmd
@@ -411,8 +411,8 @@ for tag in ['import', 'export']:
     plt.figure()
     plt.contourf(x_meshgrid, 
                  y_meshgrid, 
-#                 stats_grids[f'{tag}_U']+stats_grids[f'{tag}_U'])
-                 ratios_import_export) #, vmin=1.0, vmax=vmax, levels=np.linspace(1.0,vmax,21), extend='both')
+                 stats_grids[f'{tag}_L'])
+#                 ratios_import_export) #, vmin=1.0, vmax=vmax, levels=np.linspace(1.0,vmax,21), extend='both')
     ax= plt.gca()
     ax.set_xscale('log')
     ax.set_yscale('log')
@@ -441,6 +441,13 @@ for tag in ['import', 'export']:
 # Map NLS strength, MW size, force
 
 ```{python}
+import importlib
+import transport_simulation
+from transport_simulation import TransportSimulation
+importlib.reload(transport_simulation)
+import transport_simulation
+from transport_simulation import TransportSimulation
+
 import numpy as np
 import transport_simulation
 
@@ -449,8 +456,8 @@ def get_ts_parameters(MW= 27,
                       is_force= False, 
                       **kwargs):
     ts = TransportSimulation(**kwargs)
-    ts.set_passive_diffusion_rate_per_sec(
-        get_passive_diffusion_rate(MW, is_force))
+    ts.set_passive_export_rate_per_sec(
+        get_passive_export_rate_per_sec(MW, is_force))
     ts.set_params(rate_free_to_complex_per_sec= 
                   get_free_to_complex_rate(NLS_strength))
     ts.set_params(fraction_complex_NPC_traverse_per_sec=
@@ -459,13 +466,13 @@ def get_ts_parameters(MW= 27,
 
 def get_free_to_complex_rate(NLS_strength):
     rates = [0.0,
-             0.002, #0.07
-             0.02, #2.11
-             0.2  #16.4
+             0.005, #0.07
+             0.025, #2.11
+             0.125  #16.4
             ]
     return rates[NLS_strength]
 
-def get_passive_diffusion_rate(MW, is_force):
+def get_passive_export_rate_per_sec(MW, is_force):
     #TODO: generalize this - either from the literature or regression
     base_rates={ 27:0.07624291, 
                 41:0.0560286, 
@@ -487,10 +494,10 @@ def get_force_effect_on_diffusion(MW):
     return effects[MW]
 
 def get_fraction_complex_NPC_traverse_per_sec(MW, is_force):
-    rate= { 27: [1e-6, .5e-6],
-        41: [0.8e-6, .4e-6],
-        54: [0.75-6, 0.375e-6],
-        67: [0.7e-6, 0.35e-6] }
+    rate= { 27: [0.5e+7,    1.0e+7],
+            41: [0.4e+7,   0.8e+7],
+            54: [0.375e+7, 0.75e+7],
+            67: [0.35e+7,  0.7e+7] }
     i_force= 1 if is_force else 0
     return rate[MW][i_force]
 
@@ -501,15 +508,24 @@ def get_compartment_nmol_stats(ts,
                                stats, 
                                compartment,
                               labels= ['L', 'U']):
-    assert(compartment in ['N','C'])
+    assert(compartment in ['N','C', 'NPC'])
     nframes= len(stats['time_sec'])
     nmol_stats= np.zeros(nframes)
-    for state in ['complex']: #['free','complex']:
+    if compartment=='NPC':
         for label in labels:
-            tag= '{}{}_{}'.format(state, 
-                                  label, 
-                                  compartment)
-            nmol_stats = nmol_stats + stats[tag]
+            for side in ['N', 'C']:
+                for source in ['import', 'export']:
+                    tag= 'complex{}_NPC_{}_{}'.format(label,
+                                                     side,
+                                                     source)
+                    nmol_stats = nmol_stats + stats[tag]
+    else:
+        for state in ['free','complex']:
+            for label in labels:
+                tag= '{}{}_{}'.format(state, 
+                                      label, 
+                                      compartment)
+                nmol_stats = nmol_stats + stats[tag]
     return nmol_stats
 
 def get_compartment_concentration_stats(ts, 
@@ -541,52 +557,65 @@ def get_N_C_ratio_stats(ts,
 ```{python}
 import matplotlib.pyplot as plt
 
-fig, ax_grid= plt.subplots(5, 2, figsize=(10,10), sharex=True, sharey='row')
-ax_grid= ax_grid.transpose()
-for axes, is_force in zip(ax_grid, [False, True]):
-    for i_NLS in range(1):
-        ts = get_ts_parameters(MW=41,
-                                NLS_strength=i_NLS,
-                              is_force= is_force)
-        ts.set_params(dt_sec=1e-3)
-        simulation_time_sec= 100
-#        ts.bleach_start_time_sec= simulation_time_sec/2.0
-        stats = ts.simulate(simulation_time_sec)
-        labels= ['L', 'U']
-        x= stats['time_sec']
-        ys={}
-        ys[0]= stats['import_L'] + stats['import_U']
-        ys[1]= stats['export_L'] + stats['export_U']
-        ys[2]= get_N_C_ratio_stats(ts,
-                                   stats, 
-                                   labels)
-        ys[3]= get_compartment_nmol_stats(ts, 
-                                                  stats, 
-                                                  'C', 
-                                                  labels)
-        ys[4]= get_compartment_nmol_stats(ts, 
-                                                  stats, 
-                                                  'N', 
-                                                  labels)
-        plot_from_sec=  1.0 # ts.bleach_start_time_sec + 1.0
-        plot_from_frame= int(plot_from_sec/ts.dt_sec) 
-        for j, ax in enumerate(axes):
-            ax.plot(x[plot_from_frame:], 
-                    ys[j][plot_from_frame:],
-            label= ts.rate_free_to_complex_per_sec)
-            ax.set_xlabel(r"time [$sec$]")
-            lh= ax.legend()
-            lh.set_title('NLS_strength')
-        axes[0].set_ylabel(r"import rate [$sec^{-1}$]")
-        axes[1].set_ylabel(r"export rate [$sec^{-1}$]")
-        axes[2].set_ylabel("N/C ratio")
-        axes[3].set_ylabel(r"C [$M$]")
-        axes[4].set_ylabel(r"N [$M$]")
-        axes[3].set_yscale('log')
-        axes[4].set_yscale('log')
-        title= "30 kPa" if is_force else "5 kPa"
-        axes[0].set_title(title)
-        print(f"Is force {is_force} i_NLS {i_NLS}: OK")
+def plot_MW(MW):
+    assert(MW in [27,41, 54, 67])
+    plot_from_sec=  0.0 # ts.bleach_start_time_sec + 1.0
+    simulation_time_sec= 100.0
+    fig, ax_grid= plt.subplots(6, 2, figsize=(10,15), sharex=True, sharey='row')
+    ax_grid= ax_grid.transpose()
+    for axes, is_force in zip(ax_grid, [False, True]):
+        for i_NLS in range(4):
+            ts = get_ts_parameters(MW= MW,
+                                    NLS_strength=i_NLS,
+                                  is_force= is_force)
+#            print(vars(ts))
+            ts.set_params(dt_sec=1e-3)
+    #        ts.bleach_start_time_sec= simulation_time_sec/2.0
+            stats = ts.simulate(simulation_time_sec)
+            labels= ['L', 'U']
+            x= stats['time_sec']
+            ys={}
+            ys[0]= stats['import_L'] + stats['import_U']
+            ys[1]= stats['export_L'] + stats['export_U']
+            ys[2]= get_N_C_ratio_stats(ts,
+                                       stats, 
+                                       labels)
+            ys[3]= get_compartment_concentration_stats(ts, 
+                                                      stats, 
+                                                      'C', 
+                                                      labels)
+            ys[4]= get_compartment_concentration_stats(ts, 
+                                                      stats, 
+                                                      'N', 
+                                                      labels)
+            ys[5]= ys[3] - ys[4]
+            plot_from_frame= int(plot_from_sec/ts.dt_sec) 
+            for j, ax in enumerate(axes):
+                ax.plot(x[plot_from_frame:], 
+                        ys[j][plot_from_frame:],
+                label= ts.rate_free_to_complex_per_sec)
+                ax.set_xlabel(r"time [$sec$]")
+                lh= ax.legend()
+                lh.set_title('NLS_strength')
+            axes[0].set_ylabel(r"import rate [$sec^{-1}$]")
+            axes[1].set_ylabel(r"export rate [$sec^{-1}$]")
+            axes[2].set_ylabel("N/C ratio")
+            axes[3].set_ylabel(r"C [$M$]")
+            axes[4].set_ylabel(r"N [$M$]")
+            axes[5].set_ylabel(r"C - N [$M$]")
+            #axes[0].set_yscale('log')
+            #axes[1].set_yscale('log')
+            axes[3].set_yscale('log')
+            axes[4].set_yscale('log')
+            axes[5].set_yscale('log')
+            title= "30 kPa" if is_force else "5 kPa"
+            axes[0].set_title(title)
+            print(f"Is force {is_force} i_NLS {i_NLS}: OK")
+            
+for MW in [27, 41, 54, 67]:
+    print(MW)
+    plot_MW(MW)
+    plt.show()
 ```
 
 ```{python}
@@ -598,6 +627,10 @@ plt.plot(stats['complexL_NPC_N_import'] +
         stats['complexL_NPC_N_export'] +
         stats['complexL_NPC_C_import'] +
         stats['complexL_NPC_C_export'])
+```
+
+```{python}
+
 ```
 
 ```{python}
